# NICTO

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  FEATURES.md  FINAL_SUMMARY.md  MODEL_VERIFICATION_REPORT.md  NEXT_STEPS.md  README.md  SESSION_SUMMARY.md  SHORTCUTS.md  TASK_COMPLETION.md  _check_new_classes.py  _check_variants.py  _debug_inference.py  _improve_variants.py  _quiz_test.py  _run_tests.py  _test_endpoints.py  _test_integration.py  _test_new_modules.py  _verify_server.py  add_aliases.py  ask_nicto_ebola.py  colab_nicto_training.ipynb  debug_docking.py  debug_docking2.py  docker-compose.yml  ebola_discovery_results.json  feature_comparison.json  fix_remaining_nikto.py  generate_logo.py  history_of_the_brain.md  install.py  kyros.json  kyros_feature_comparison.json  kyros_features.json  (+36 more)
.mypy_cache/3.14/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  (+232 more)
.nicto/: consents.json  meta_log.jsonl
agents/: README.md
assets/: avatar.html  loading.html  marketing.html
configs/: README.md
datasets/: README.md
deployment/: README.md
docs/: README.md  architecture.md  deployment.md  development.md  setup.md  training.md
evaluation/: README.md
kaggle_data/: README.md  dataset_metadata.json
logs/: README.md
memory/: README.md
nicto-neural/: ARCHITECTURE.md  README.md  __init__.py  brain_router.py  config.py  consistency.py  elo.py  evaluator.py  exploration.py  memory.py  neural_core.py  pyproject.toml  reflection.py
nicto-neural/api/: agent_api.py  brain_api.py  elo_api.py  evolution_api.py  memory_api.py  reflection_api.py  task_api.py
nicto-neural/brain/: analytical.py  consciousness.py  creative.py  intuitive.py  knowledge.py  orchestrator.py  primary.py  strategic.py
nicto-neural/evolution/: __init__.py  cost_estimator.py  curriculum_manager.py  engine.py  improvement.py  validation.py
nicto-neural/execution/: actions.py  agents.py  orchestration.py  tools.py
nicto-neural/learning/: curriculum.py  dataset_builder.py  experience_buffer.py  feedback_loop.py  fine_tune.py  reward_model.py  reward_shaper.py  rl_agent.py  trainer.py
nicto-neural/memory/: base.py  consistency.py  episodic.py  experience.py  goals.py  manager.py  performance.py  personality.py  reflection.py  semantic.py  skills.py  task_features.py
nicto-neural/neural/: attention.py  brain_heads.py  config.py  elo_system.py  exploration.py  model_selector.py  moe_router.py  positional.py  tensor_ops.py  transformer.py
nicto-neural/perception/: audio_encoder.py  embedding.py  feature_engine.py  image_encoder.py  multimodal_fusion.py  normalizer.py  text_encoder.py  tokenizer.py
nicto-neural/reasoning/: brainboost.py  chain_engine.py  confidence.py  consistency.py  evaluator.py  interpretability.py  planner.py  reflection.py
nicto-neural/safety/: audit.py  permissions.py  policies.py  reward_hacking.py  rollback.py
nicto-neural/tests/: test_brainboost.py  test_brains.py  test_consistency.py  test_cost_estimator.py  test_curriculum.py  test_elo_system.py  test_experience_buffer.py  test_exploration.py  test_feature_engine.py  test_full_pipeline.py  test_interpretability.py  test_learning.py  test_memory.py  test_model_selector.py  test_neural_core.py  test_normalizer.py  test_reasoning.py  test_reward_hacking.py  test_rl_agent.py  test_safety.py  test_transformer.py  test_validation.py
nicto-neural/training/: comparison_report.md  generate_graphs.py  neural_demo.html  train_nicto.py  training_metrics.json
nicto_neural/: ARCHITECTURE.md  README.md  __init__.py  aknow_hyperbridge.py  aknow_nicto_bridge.py  aknow_omega.py  benchmark_nicto.py  benchmark_v3.py  brain_inference.py  bugsweep.py  build_super_data.py  build_super_data_v3.py  build_training_data.py  continual_learning.py  continuous_improvement_v3.py  demo_skills.py  gods_eye_map.html  growth_log.json  hardware_config.json  logo.py  metacognition.py  metacognition_state.json  neural_core.py  nicto_game_builder.py  nicto_image_gen.py  nicto_master.py  nicto_super_v3.py  nicto_video_gen.py  run_nicto.py  run_nicto_omega.py  setup.py  setup_real_ai.py  skill_ai_builder.py  super_metacognition.py  train_nicto.py  train_skills.py  train_super.py  train_super_v3.py  train_virtualab.py  validate_universal.py  (+1 more)
nikto_cli/: main.py
notebooks/: Getting_started_with_google_colab_ai.ipynb  README.md  nikto_elite_from_scratch.ipynb  nikto_from_scratch_train.ipynb  nikto_from_scratch_v5.ipynb  nikto_kaggle_train.ipynb  nikto_v5_kaggle.ipynb
screenshots/: capture.py  generate_screenshots.py
scripts/: colab_data_setup.sh  colab_train_all.py  deploy_minecraft.sh  download_datasets.py  eagle_scan_and_compare.py  gather_creative_data.py  generate_graph.py  generate_icon.py  generate_sample_sprite.py  gguf_export.py  health_check.py  install.sh  integrate_gguf.py  kaggle_prepare_data.py  list_features.py  nicto_colab_kaggle.py  nikto.service  run_recursive_creative_learning.py  setup-dev.sh  test_cli_integration.py  test_full_integration.py  train_and_verify_all_models.py  train_creative_brain.py  verify_game_engine.py  write_kaggle_metadata.py  write_remaining_subsets.py  youtube_cinematography_scraper.py  zip_kaggle_data.py
tests/: conftest.py  test_intira_full.py  test_master_pipeline.py  test_webui_assets.py  verify_all_components.py
tools/: README.md
training/: README.md
(+879 files in other folders)
