[project]
name = "nikto"
version = "0.1.0"
description = "The Ultimate AI Agent Platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.6.0",
    "rich>=13.0.0",
    "textual>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "playwright>=1.50.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.0",
    "mss>=9.0.0",
    "asyncio>=3.4.0",
    "websockets>=12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
nikto = "nikto_cli.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
]
package = false

[tool.hatch.build.targets.wheel]
packages = ["packages/nikto-core/src/nikto", "packages/nikto-cli/src/nikto_cli"]
